--- a/style.css
+++ b/style.css
@@ -1,41 +1,35 @@
-/* navbar design starts here */
-/* .navbar-logo{
+body{
     
-    text-align: left;
+
+    margin: 5%;
+    font-family: 'Poppins', sans-serif;
+}
+section{
+    padding: 5%;
+    margin-bottom: 30px;
+}
+span{
+    color:orange
+    
+}
+h1{
+    font-size: 35px;
+    font-weight:900;
+}
+.link-button{
+    text-decoration: none;
+    background-image: linear-gradient(orange,tomato);
+    padding: 10px 40px;
+    color: white;
+    border-radius: 20px;
+    font-weight: 700px;
 
 }
-.navbar-menu{
-    flex-direction: row;
-    justify-content: flex-end;
+.half-width{
+    float: left;
+    width: 50%;
 }
-.navbar-menu a{
-    padding: 5px 10px;
-    margin: 20px 0;
-} */
-.navbar{
-    background-color: #021d1f;
-    padding:1% 7%;
-    text-align: center;
-} 
-.navbar-menu{
-    display: flex;
-    flex-direction: column;
-    text-transform: uppercase;
-
+.half-width img{
+    width: 80%;
 }
- .navbar-menu a{
-    background-color: #40868b;
-    border-radius: 10px;
-    margin: 3px 0px;
-    padding: 10px;
-}
-.navbar-menu a:hover{
-    background-color: gray;
-
-}
-
-.navbar::after{
-    content: '';
-    display: table;
-    clear: both;
-}
+ 
